# Another-Ripple

./: CMakeLists.txt  README.md
AnotherRipple/: AnotherRipple.cpp  AnotherRipple.h  AnotherRipple.pri  AnotherRipple.pro  CMakeLists.txt  IconRipple.cpp  IconRipple.h  ImageRipple.cpp  ShapedRipple.cpp  ShapedRipple.h  SimpleRipple.cpp  SimpleRipple.h  framehandler.cpp  framehandler.h
AnotherRipple/include/: AnotherRipple.h
AnotherRipple/include/AnotherRipple/: AnotherRippleBase.h  IconRipple.h  ImageRipple.h  ShapedRipple.h  framehandler.h
AnotherRipple/src/: AnotherRippleBase.cpp  IconRipple.cpp  ImageRipple.cpp  SimpleRipple.cpp  framehandler.cpp
test/: CMakeLists.txt  MyRippleTest.pro  main.cpp  main.qml
